--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-signin-client_id" content="351753012183-ct5hbsniamlr3cccenllumns8q3kchog.apps.googleusercontent.com">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso denegado</title>
+    <title>Google Signig</title>
 </head>
 <body>
     
 
-    <h1>Acceso denegado</h1>
+    <h1>Google Signig</h1>
+    <hr>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <br>
+    <a href="#" onclick="signOut();">Sign out</a>
+
+
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>   
+     <script>
+
+         var url = ( window.location.hostname.includes('localshot') )
+                ? 'http://localhost:8080/api/auth/google'
+                : 'http://localhost:8080/api/auth/google'
+
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+            console.log('Name: ' + profile.getName());
+            console.log('Image URL: ' + profile.getImageUrl());
+            console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+
+            var id_token = googleUser.getAuthResponse().id_token;
+            const data = { id_token }
+
+            fetch( url, {
+                method:'POST',
+                headers:{ 'Content-Type': 'application/json' },
+                body: JSON.stringify(data)
+            })
+            .then( resp => resp.json() )
+            .then( data=> console.log('Mi Server', data) )
+            .catch( console.log );
+        }
+
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log('User signed out.');
+            });
+        }
+
+     </script>
 </body>
 </html>
